--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<br /><br />
 			<a href="https://github.com/robercik10192/robercik10192.github.io/blob/master/README.md">O co tu chodzi?</a>
 			<br /><br />
-			<a href="https://github.com/robercik10192/robercik10192.github.io/blob/master/README.md">Generator ver. Marvel</a>
+			<a href="https://github.com/BadOmen94PL/genMarvel/blob/master/README.md">Generator ver. Marvel</a>
 			<br />
 			Zahęcamy do polubienia strony FB naszego studia :) <br />
 			<div class="fb-page" data-href="https://www.facebook.com/bloodthistycat/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/kociblog/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/kociblog/">Miau - Koci Blog</a></blockquote></div>
