--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div id="tresc">
 		<img src="https://vignette.wikia.nocookie.net/psnplatinum/images/f/ff/Marvel_Comics_logo.png/revision/latest?cb=20140505030402" style="width:30%;height:20%;">
 			<h1>Generator parodii fabuły Marvela, </h1> <br /> 
-			<h2>czyli co by było, gdyby Marvel Cinematic Uniwesre był tworzony w Polsce przez polaków. :)</h2> <br />
+			<h2>czyli co by było, gdyby Marvel Cinematic Universe był tworzony w Polsce przez Polaków. :)</h2> <br />
 			by Robert "robercik101" Niemiec and Bartosz "BadOmen" <br /> for BloodthirstyCat Studio  <br /><br />
 			<div id="gen"></div><br /><br />
 			<button type="button" onclick="generuj()">Odśwież</button>
